[gd_scene load_steps=8 format=3 uid="uid://dogflmftl1gnv"]

[ext_resource type="Script" uid="uid://dwvwai0bmb5er" path="res://menus/death_menu/death_menu.gd" id="1_wtgas"]
[ext_resource type="PackedScene" uid="uid://doxhfoom6rwew" path="res://menus/sub_menus/sub_menu.tscn" id="2_awhvd"]
[ext_resource type="PackedScene" uid="uid://bmtqj1h3365pr" path="res://menus/sub_menus/load_game_menu/load_game_menu.tscn" id="3_r57qi"]

[sub_resource type="LabelSettings" id="LabelSettings_ojypb"]
font_size = 48

[sub_resource type="Animation" id="Animation_bjvpn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_x7c3f"]
resource_name = "fade_in"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bjvpn"]
_data = {
&"RESET": SubResource("Animation_bjvpn"),
&"fade_in": SubResource("Animation_x7c3f")
}

[node name="DeathMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wtgas")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.470588)

[node name="Menus" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="IndexMenu" parent="Menus" instance=ExtResource("2_awhvd")]
unique_name_in_owner = true
layout_mode = 1

[node name="BackButton" parent="Menus/IndexMenu" index="0"]
visible = false

[node name="Title" parent="Menus/IndexMenu" index="1"]
offset_left = -94.5
offset_top = -212.0
offset_right = 94.5
offset_bottom = -145.0
text = "You Died"
label_settings = SubResource("LabelSettings_ojypb")
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="Menus/IndexMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -95.0
offset_right = 113.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menus/IndexMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoadLastSaveButton" type="Button" parent="Menus/IndexMenu/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Load Last Save"

[node name="LoadSaveButton" type="Button" parent="Menus/IndexMenu/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Load Save"

[node name="MainMenuButton" type="Button" parent="Menus/IndexMenu/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Exit To Main Menu"

[node name="LoadGameMenu" parent="Menus" instance=ExtResource("3_r57qi")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bjvpn")
}

[editable path="Menus/IndexMenu"]
